# grupo-4

./: .pre-commit-config.yaml  Home.py  LICENSE  README.md  pyproject.toml
dash_txt/: yahoo.txt
notebooks/: 0_analisis_exploratorio.ipynb
scrum/resources/: recursos.txt
scrum/sprints/: sprint_1.md  sprint_2.md  sprint_3.md  sprint_4.md  sprint_5.md  sprint_6.md  sprint_7.md  sprint_8.md
src/: config.py
src/analysis/: 0_descriptivo.py  1_inferencia.py  2_modelo.py
src/data/: dashboard.py  inferencia.py  limpieza_datos.py  main.py  var_cvar.py
src/data/csv/: rendimientos_diarios.csv
src/viz/: plots.py
src/viz/dashboard/: dash_stream_example.py
