[project]
name = "plantilla-repo-proyecto-ca-307"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "conventional-pre-commit>=4.2.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shiny>=1.4.0",
]
